tests222/tests2/test330.out
lli: <stdin>:1:1: error: expected top-level entity
line 1: variable boolSYM7tX9T is not defined
^
